# magma.classic

./: .gitignore  .travis.yml  Makefile.am  configure.ac
check/core/: core_check.c  core_check.h  runner.c
scripts/builders/: build.lib.sh
src/: magma.c  magma_common.h  magma_external.h
src/core/: core.h  type.c
src/core/buckets/: arrays.c  pool.c  stacked.c
src/core/classify/: ascii.c
src/core/compare/: ends.c  equal.c  search.c  starts.c
src/core/config/: core_config.c  core_config.h
src/core/encodings/: base64.c  hex.c  mappings.c  qp.c  url.c  zbase32.c
src/core/hash/: adler.c  crc.c  fletcher.c  murmur.c
src/core/host/: files.c  folder.c  host.c  mappings.c  process.c  spool.c
src/core/indexes/: cursors.c  hashed.c  inx.c  linked.c
src/core/limits/: system_limits.c  system_limits.h
src/core/log/: log.c
src/core/memory/: align.c  bits.c  memory.c  secure.c
src/core/parsers/: case.c  line.c  time.c  token.c  trim.c
src/core/parsers/formats/: nvp.c
src/core/parsers/numbers/: digits.c  numbers.c
src/core/parsers/special/: bracket.c
src/core/strings/: allocation.c  data.c  info.c  length.c  multi.c  nuller.c  opts.c  print.c  replace.c  shortcuts.c  strings.h  validate.c
src/core/thread/: keys.c  mutex.c  rwlock.c  thread.c
src/engine/: engine.h
src/engine/config/: config.h
src/engine/config/cache/: cache.c  cache.h
src/engine/config/global/: datatier.c  global.c  global.h
src/engine/config/relay/: relay.c  relay.h
src/engine/config/servers/: servers.c  servers.h
src/engine/context/: args.c  context.h  process.c  sanity.c  signal.c  system.c  thread.c
src/engine/controller/: protocol.c  queue.c
src/engine/status/: build.c  performance.c  statistics.c  status.c
src/network/: addresses.c  clients.c  connections.c  listeners.c  network.h  options.c  read.c  reverse.c  write.c
src/objects/: locks.c  objects.c  objects.h  serials.c
src/objects/config/: config.c  datatier.c
src/objects/contacts/: contacts.c  contacts.h  datatier.c  find.c
src/objects/folders/: contacts.c  datatier.c  find.c  folders.c  messages.c
src/objects/mail/: cache.c  cleanup.c  counters.c  datatier.c  headers.c  load_message.c  mail.h  mime.c  objects.c  parsing.c  paths.c  remove_message.c  signatures.c  store_message.c
src/objects/messages/: datatier.c  messages.c  messages.h  meta.c
src/objects/neue/: credentials.c  neue.c
src/objects/sessions/: sessions.c
src/objects/users/: alerts.c  aliases.c  contacts.c  datatier.c  folders.c  messages.c  users.c
src/objects/warehouse/: datatier.c  domains.c  patterns.c  warehouse.c
src/providers/: providers.h  symbols.c  symbols.h
src/providers/checkers/: clamav.c  dkim.c  dspam.c  spf.c
src/providers/compress/: bzip.c  compress.c  engine.c  lzo.c  zlib.c
src/providers/consumers/: cache.c  counters.c  deserialization.c  serialization.c
src/providers/cryptography/: ciphers.c  cryptex.c  digest.c  ecies.c  new_hmac.c  openssl.c  random.c  scramble.c  symmetric.c
src/providers/database/: mysql.c  query.c  results.c  stmts.c  transaction.c
src/providers/images/: freetype.c  gd.c  jpeg.c  png.c
src/providers/parsers/: json.c  xml.c
src/providers/storage/: data.c  tank.c  tokyo.c  tree.c
src/servers/: servers.h
src/servers/http/: content.c  data.c  errors.c  http.c  http.h  parse.c  response.c  sessions.c
src/servers/imap/: commands.c  fetch.c  fetch_response.c  flags.c  folders.c  imap.c  imap.h  messages.c  output.c  parse.c  parse_address.c  range.c  search.c  sessions.c
src/servers/molten/: commands.c  molten.c  sessions.c
src/servers/pop/: commands.c  mailbox.c  parse.c  pop.c  sessions.c
src/servers/smtp/: accept.c  checkers.c  commands.c  datatier.c  messages.c  parse.c  relay.c  session.c  smtp.c  smtp.h  transmit.c
src/web/: web.h
src/web/contact/: abuse.c  business.c  contact.c  contact.h
src/web/portal/: config.c  contacts.c  endpoint.c  flags.c  folders.c  mail.c  messages.c  parse.c  portal.c  portal.h
src/web/register/: abuse.c  business.c  captcha.c  datatier.c  register.c  sessions.c
src/web/statistics/: datatier.c  statistics.c
src/web/teacher/: datatier.c  teacher.c
